added dimension and fact tables, edits to sql scripts

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 dump/
 __pycache__
 sql/other/
-.DS_Store
+*.DS_Store
 *.ipynb
 data/.DS_Store
 sql/TEMPORARY_employee and restaurant details tables.sql
 sql/TEMPORARY_import employees and salary and query worktime and salary.sql
+sql/with_save_locations/
+data/dw2
+data/.DS_Store
